# ecosnap

./: .gitignore  App.js  Bar.js  Button.js  Description.js  Explain.js  LICENSE  Loading.js  README.md  SearchBar.js  VeiwPort.js  app.json  basesixtyfour.html  data-comp.json  data.json  dukePlzEdit  dukePlzEdit2  index  index.html  justfile  logo.py  main.py  package-lock.json  package.json  requirments.txt  style
api/: justfile
api/v1/: main.py
api/v2/: Cargo.toml  cmd.sh
api/v2/src/: google.rs  main.rs  query.rs  search.rs
app/: App.js
app/components/: Bar.js  Button.js  VeiwPort.js
chrome/: README.txt  popup.html  style.css
components/: Explain.js
data/: commitment.json  gov.json  show-fix.json  spotlight-issues.json  supply-chain.json
ext/chrome/: README.txt  manifest.json  popup.html  script.js
v2/: Cargo.toml
v2/src/: google.rs  main.rs  response.rs  search.rs
