[package]
name = "ecosnap"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
json = { package = "serde_json", version = "1" }
logger = { package = "env_logger", version = "0.11" }
log = "0.4"
strsim = "0.11"
futures = "0.3"
base64 = "0.21"
image = "0.24"
resu = { package = "error-stack", version = "0.4" }
